5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/1165/executions/1745_3088.log
== TEST (2019-05-15 15:04:17) 
-- CODE:
x = int(input("Leia o numero: "))
c = 0
p = 0
i = 0

while (x!=0):
	if(x%2==0)
		p = p+1
	else:
		i = i + 1
	c = c + 1
	x = int(input("Leia o numero: "))
if(p>0):
	d = p/c
	print(round(d, 2))
elif(i>0):
	e = d/ c
	print(round(e, 2))
	e = i/c
-- ERROR:
File "XXXX", line 7
    if(x%2==0)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:04:59) 
-- CODE:
x = int(input("Leia o numero: "))
c = 0
p = 0
i = 0

while (x!=0):
	if(x%2==0)
		p = p+1
	else:
		i = i + 1
	c = c + 1
	x = int(input("Leia o numero: "))
if(p > 0):
	d = p/c
	print(round(d, 2))
else(i > 0):
	e = d/c
	print(round(e, 2))
-- ERROR:
File "XXXX", line 7
    if(x%2==0)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:05:37) 
-- CODE:
x = int(input("Leia o numero: "))
c = 0
p = 0
i = 0

while (x!=0):
	if(x == 0)
		p = p+1
	else:
		i = i + 1
	c = c + 1
	x = int(input("Leia o numero: "))
if(p > 0):
	d = p/c
	print(round(d, 2))
else(i > 0):
	e = d/c
	print(round(e, 2))
-- ERROR:
File "XXXX", line 7
    if(x == 0)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:05:56) 
-- CODE:
x = int(input("Leia o numero: "))
c = 0
p = 0
i = 0

while (x!=0):
	if(x == 0):
		p = p+1
	else:
		i = i + 1
	c = c + 1
	x = int(input("Leia o numero: "))
if(p > 0):
	d = p/c
	print(round(d, 2))
else(i > 0):
	e = d/c
	print(round(e, 2))
-- ERROR:
File "XXXX", line 16
    else(i > 0):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:06:30) 
-- CODE:
x = int(input("Leia o numero: "))
c = 0
p = 0
i = 0

while (x!=0):
	if(x == 0):
		p = p+1
	else:
		i = i + 1
	c = c + 1
	x = int(input("Leia o numero: "))
if(p > 0):
	d = p/c
	print(round(d, 2))
elif(i > 0):
	e = d/c
	print(round(e, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    e = d/c
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:11:32) 
-- CODE:
x = int(input("Leia o numero: "))
c = 0
p = 0
i = 0

while (x!=0):
	if(x == 0):
		p = p+1
	else:
		i = i + 1
	c = c + 1
	x = int(input("Leia o numero: "))
if(p > 0):
	d = p/c
	print(round(d, 2))
elif(i > 0):
	e = d/c
	print(round(e, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    e = d/c
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:13:54) 
-- CODE:
x = int(input("Leia o numero: "))
c = 0
p = 0
i = 0

while (x!=0):
	if(x == 0):
		p = p+1
	else:
		i = i + 1
	c = c + 1
	x = int(input("Leia o numero: "))
if(p > 0):
	d = p/c
	print(round(d, 2))
elif(i > 0):
	e = d/c
print(round(e, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    e = d/c
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:14:50) 
-- CODE:
x = int(input("Leia o numero: "))
c = 0
p = 0
i = 0

while (x!=0):
	if(x == 0):
		p = p+1
	else:
		i = i + 1
	c = c + 1
	x = int(input("Leia o numero: "))
if(p > 0):
	d = p/c
	print(round(d, 2))
elif(i > 0):
	e = d/c
print(round(e, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    e = d/c
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:14:53) 
-- CODE:
x = int(input("Leia o numero: "))
c = 0
p = 0
i = 0

while (x!=0):
	if(x == 0):
		p = p+1
	else:
		i = i + 1
	c = c + 1
	x = int(input("Leia o numero: "))
if(p > 0):
	d = p/c
	print(round(d, 2))
elif(i > 0):
	e = d/c
print(round(e, 2))
-- EXECUTION TIME:
0.149108
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1745/3088/main.py", line 17, in <module>
    e = d/c
NameError: name 'd' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:28:04) 
-- CODE:
x = int(input("Leia o numero: "))
c = 0
p = 0
i = 0

while (x!=0):
	if(x == 0):
		p = p+1
	else:
		i = i + 1
	c = c + 1
	x = int(input("Leia o numero: "))
if(p > 0):
	d = p/c
	print(round(d, 2))
elif(i > 0):
	e = d/c
print(round(e, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    e = d/c
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:29:45) 
-- CODE:
x = int(input("Leia o numero: "))
c = 0
p = 0
i = 0

while (x!=0):
	if(x == 0):
		p = p+1
	else:
		i = i + 1
	c = c + 1
	x = int(input("Leia o numero: "))
if(p > 0):
	d = p/c
	print(round(d, 2))
elif(i > 0):
	e = i/c
print(round(e, 2))
-- OUTPUT:
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:29:48) 
-- CODE:
x = int(input("Leia o numero: "))
c = 0
p = 0
i = 0

while (x!=0):
	if(x == 0):
		p = p+1
	else:
		i = i + 1
	c = c + 1
	x = int(input("Leia o numero: "))
if(p > 0):
	d = p/c
	print(round(d, 2))
elif(i > 0):
	e = i/c
print(round(e, 2))
-- EXECUTION TIME:
0.197619
-- TEST CASE 1:
---- input:
-10
-8
-6
-4
-2
0
---- correct output:
100.0
0.0
---- user output:
1.0
-- TEST CASE 2:
---- input:
11
11
9
1
10
2
4
0
---- correct output:
42.86
57.14
---- user output:
1.0
-- TEST CASE 3:
---- input:
1
2
3
4
5
6
7
8
9
0
---- correct output:
44.44
55.56
---- user output:
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:30:09) 
-- CODE:
x = int(input("Leia o numero: "))
c = 0
p = 0
i = 0

while (x!=0):
	if(x == 0):
		p = p+1
	else:
		i = i + 1
	c = c + 1
	x = int(input("Leia o numero: "))
if(p > 0):
	d = p/c
	print(round(d, 2))
elif(i > 0):
	e = i/c
print(round(e, 2))
-- EXECUTION TIME:
0.131639
-- TEST CASE 1:
---- input:
-10
-8
-6
-4
-2
0
---- correct output:
100.0
0.0
---- user output:
1.0
-- TEST CASE 2:
---- input:
11
11
9
1
10
2
4
0
---- correct output:
42.86
57.14
---- user output:
1.0
-- TEST CASE 3:
---- input:
1
2
3
4
5
6
7
8
9
0
---- correct output:
44.44
55.56
---- user output:
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:30:10) 
-- CODE:
x = int(input("Leia o numero: "))
c = 0
p = 0
i = 0

while (x!=0):
	if(x == 0):
		p = p+1
	else:
		i = i + 1
	c = c + 1
	x = int(input("Leia o numero: "))
if(p > 0):
	d = p/c
	print(round(d, 2))
elif(i > 0):
	e = i/c
print(round(e, 2))
-- OUTPUT:
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:30:24) 
-- CODE:
x = int(input("Leia o numero: "))
c = 0
p = 0
i = 0

while (x!=0):
	if(x == 0):
		p = p+1
	else:
		i = i + 1
	c = c + 1
	x = int(input("Leia o numero: "))
if(p > 0):
	d = p/c
	print(round(d, 2))
elif(i > 0):
	e = i/c
print(round(e, 2))
-- OUTPUT:
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:32:02) 
-- CODE:
x = int(input("Leia o numero: "))
c = 0
p = 0
i = 0

while (x!=0):
	if(x == 0):
		p = p+1
	else:
		i = i + 1
	c = c + 1
	x = int(input("Leia o numero: "))
if(p > 0):
	d = p/c
	print(round(d, 2))
elif(i > 0):
	e = i/c
print(round(e, 2))
-- EXECUTION TIME:
0.12777
-- TEST CASE 1:
---- input:
-10
-8
-6
-4
-2
0
---- correct output:
100.0
0.0
---- user output:
1.0
-- TEST CASE 2:
---- input:
11
11
9
1
10
2
4
0
---- correct output:
42.86
57.14
---- user output:
1.0
-- TEST CASE 3:
---- input:
1
2
3
4
5
6
7
8
9
0
---- correct output:
44.44
55.56
---- user output:
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:38:31) 
-- CODE:
x = int(input("Leia o numero: "))
c = 0
p = 0
i = 0

while (x!=0):
	if(x == 0):
		p = p+1
	else:
		i = i + 1
	c = c + 1
	x = int(input("Leia o numero: "))
if(p > 0):
	d = p/c
	print(round(d, 2))
elif(i > 0):
	e = i/c
print(round(e, 2))
-- EXECUTION TIME:
0.137557
-- TEST CASE 1:
---- input:
-10
-8
-6
-4
-2
0
---- correct output:
100.0
0.0
---- user output:
1.0
-- TEST CASE 2:
---- input:
11
11
9
1
10
2
4
0
---- correct output:
42.86
57.14
---- user output:
1.0
-- TEST CASE 3:
---- input:
1
2
3
4
5
6
7
8
9
0
---- correct output:
44.44
55.56
---- user output:
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:38:31) 
-- CODE:
x = int(input("Leia o numero: "))
c = 0
p = 0
i = 0

while (x!=0):
	if(x == 0):
		p = p+1
	else:
		i = i + 1
	c = c + 1
	x = int(input("Leia o numero: "))
if(p > 0):
	d = p/c
	print(round(d, 2))
elif(i > 0):
	e = i/c
print(round(e, 2))
-- EXECUTION TIME:
0.219506
-- TEST CASE 1:
---- input:
-10
-8
-6
-4
-2
0
---- correct output:
100.0
0.0
---- user output:
1.0
-- TEST CASE 2:
---- input:
11
11
9
1
10
2
4
0
---- correct output:
42.86
57.14
---- user output:
1.0
-- TEST CASE 3:
---- input:
1
2
3
4
5
6
7
8
9
0
---- correct output:
44.44
55.56
---- user output:
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
